# llvm_demystified

./: .gitignore  README.md  run_docker.sh
advisor-plugin/: AdvisorPass.cpp  CMakeLists.txt  README.md  run.sh
bootstrap/: bootstrap.sh
bye-plugin/: Bye.cpp  CMakeLists.txt  README.md  run.sh
intro/: 02.cpp  03.cpp  03_manual.sh  04.cpp  04_solution.sh  README.md  build_all.sh
ir-debugging/: broken.cpp  broken_but_not_optimized.cpp  debug_broken.sh
irbuilder/: CMakeLists.txt  EmulateMulDivPass.cpp  README.md  build.sh  divide_impl.ll  mulitply.ll  run.sh
irbuilder/solution/: CMakeLists.txt  EmulateMulDivPassSolution.cpp
my-llvm-build/: bootstrap.sh
pgo-advisor-plugin/: CMakeLists.txt  PGOAdvisorPass.cpp  README.md  build.sh  run.sh
pretty-stack-trace/: CMakeLists.txt  build.sh  main.cpp  run.sh
res/: div.cpp  fft.cpp  fft.ll  simple.c  simple.ll
